不要なライブラリの削除 postのパラメータをrequireに変更
