# backend/internal/openapi/openapi.gen.go
@@ -15,12 +15,12 @@ type GetPostResponse = Post
 
 // Post defines model for Post.
 type Post struct {
-	Body      *string    `json:"body,omitempty"`
-	CreatedAt *time.Time `json:"createdAt,omitempty"`
-	Id        *int       `json:"id,omitempty"`
-	Title     *string    `json:"title,omitempty"`
-	UpdatedAt *time.Time `json:"updatedAt,omitempty"`
-	UserName  *string    `json:"userName,omitempty"`
+	Body      string    `json:"body"`
+	CreatedAt time.Time `json:"createdAt"`
+	Id        int       `json:"id"`
+	Title     string    `json:"title"`
+	UpdatedAt time.Time `json:"updatedAt"`
+	UserName  string    `json:"userName"`
 }
 
 // User defines model for User.
