# openapi/openapi.yml
@@ -118,6 +118,13 @@ components:
         updatedAt:
           type: string
           format: date-time
+      required:
+        - id
+        - title
+        - body
+        - userName
+        - createdAt
+        - updatedAt
     User:
       title: User
       type: object
